--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\projects\\\\git-hub\\\\End to End Mlops with MLFlow\\\\research'"
+       "'d:\\\\projects\\\\git-hub'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,16 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"../\")"
+    "os.chdir(\".\\End to End Mlops with MLFlow\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'d:\\\\projects\\\\git-hub\\\\End to End Mlops with MLFlow'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
     "    def train_test_spliting(self):\n",
     "        data = pd.read_csv(self.config.data_path)\n",
     "\n",
-    "        # Split the data into training and test sets. (0.75, 0.25) split.\n",
+    "        # Split the data into training and test sets. Default split (0.75, 0.25) split.\n",
     "        train, test = train_test_split(data)\n",
     "\n",
     "        train.to_csv(os.path.join(self.config.root_dir, \"train.csv\"),index = False)\n",
@@ -163,6 +163,45 @@
     "        print(test.shape)\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-03-09 23:30:36,999: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-03-09 23:30:37,005: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-03-09 23:30:37,015: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-03-09 23:30:37,019: INFO: common: created directory at: artifacts]\n",
+      "[2024-03-09 23:30:37,024: INFO: common: created directory at: artifacts/data_transformation]\n",
+      "[2024-03-09 23:30:37,081: INFO: 842736296: Splited data into training and test sets]\n",
+      "[2024-03-09 23:30:37,083: INFO: 842736296: (1199, 12)]\n",
+      "[2024-03-09 23:30:37,086: INFO: 842736296: (400, 12)]\n",
+      "(1199, 12)\n",
+      "(400, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_transformation_config = config.get_data_transformation_config()\n",
+    "    data_transformation = DataTransformation(config=data_transformation_config)\n",
+    "    data_transformation.train_test_spliting()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
